Record processing backport (#531)
Record processing backport

Signed-off-by: David Kral <david.k.kral@oracle.com>